--- a/GrpcGreeter/GrpcGreeter/GrpcGreeter.csproj
+++ b/GrpcGreeter/GrpcGreeter/GrpcGreeter.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\product.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
