--- a/GrpcGreeterClient/GrpcGreeterClientAsServiceRef/GrpcGreeterClientAsServiceRef.csproj
+++ b/GrpcGreeterClient/GrpcGreeterClientAsServiceRef/GrpcGreeterClientAsServiceRef.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Remove="Protos\greet.proto" />
+    <None Remove="Protos\product.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\product.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
